# CASTAITask

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
outputs/mlruns/0/: meta.yaml
outputs/mlruns/0/68dc5947beef477ba90373bcdcb18aca/: meta.yaml
outputs/mlruns/117438248978699439/: meta.yaml
outputs/mlruns/117438248978699439/0236142e10db428fb8fec8ecec365ae8/: meta.yaml
outputs/mlruns/117438248978699439/05bfa0797e4041c39622cbd29ead0cf8/: meta.yaml
outputs/mlruns/117438248978699439/163faa1fd60e411aa2d23b7e5df83c4b/: meta.yaml
outputs/mlruns/117438248978699439/22ab27a7634f498db42188f2329b4152/: meta.yaml
outputs/mlruns/117438248978699439/2a95de5e07564888a222aafbd83f6d7e/: meta.yaml
outputs/mlruns/132247410015272012/: meta.yaml
outputs/mlruns/155756887683193776/: meta.yaml
outputs/mlruns/190811154545330430/: meta.yaml
outputs/mlruns/303537251745913987/: meta.yaml
outputs/mlruns/352001033343944190/: meta.yaml
outputs/mlruns/408349066223387673/: meta.yaml
outputs/mlruns/436713555118059292/: meta.yaml
outputs/mlruns/461330050770160812/: meta.yaml
outputs/mlruns/595820845619349214/: meta.yaml
outputs/mlruns/602930157883708136/: meta.yaml
outputs/mlruns/621673722231548199/: meta.yaml
outputs/mlruns/708526477846062026/: meta.yaml
report/: REPORT.md
src/: experiments.ipynb
src/datautils/: ClassRebalancer.py  DataSampler.py
src/features/: FeatureEngineer.py
src/models/: NeuralNets.py
src/optimiser/: ModelOptimiser.py  __init__.py
src/utils/: EDA.py  utils.py
(+5135 files in other folders)
